--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "axios": "^1.2.1",
+    "bcrypt": "^5.1.0",
+    "mongoose": "^6.8.1",
     "next": "13.0.7",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
